<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_delete_all_tasks">Are you sure you want to delete ALL completed tasks?</string>
    <string name="boost_your_productivity">Boost your productivity!</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="break_dialog_body_long_break">Your pomodoro is over.\10Take a longer break. You deserve it!</string>
    <string name="break_dialog_body_short_break">Your pomodoro is over.\10It’s time for a short break.</string>
    <string name="break_header_v1">Applause!</string>
    <string name="break_header_v10">Let\'s celebrate!</string>
    <string name="break_header_v2">You\'re the best!</string>
    <string name="break_header_v3">Congrats!</string>
    <string name="break_header_v4">Party time!</string>
    <string name="break_header_v5">Good job!</string>
    <string name="break_header_v6">Break O\'Clock!</string>
    <string name="break_header_v7">You did it!</string>
    <string name="break_header_v8">Have a cake!</string>
    <string name="break_header_v9">Coffee time!</string>
    <string name="break_reminders">Break reminders</string>
    <string name="button_long_break">Start Long Break</string>
    <string name="button_short_break">Start Short Break</string>
    <string name="button_skip_break">Skip Break</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_pomodoro">Cancel Pomodoro</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="customizable">Customizable</string>
    <string name="default_web_client_id">40399874452-86b3pv0n6jo2t971odeehhqh8obkk7tt.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_all_completed_tasks">Delete completed tasks</string>
    <string name="delete_task_confirmation_body">Say goodbye. Your task \"%s\" will be gone. Forever.</string>
    <string name="delete_task_confirmation_cancel">No way!</string>
    <string name="delete_task_confirmation_confirm">Delete</string>
    <string name="delete_task_confirmation_header">Are you sure?</string>
    <string name="eula_link">By using this application, you agree to its Terms of Use and Privacy Policy</string>
    <string name="expected_pomodoros">Expected pomodoros:</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="fifty_minutes">50 minutes</string>
    <string name="firebase_database_url">https://pomodoro-timer-pro.firebaseio.com</string>
    <string name="five_minutes">5 minutes</string>
    <string name="forty_five_minutes">45 minutes</string>
    <string name="forty_minutes">40 minutes</string>
    <string name="four_minutes">4 minutes</string>
    <string name="gcm_defaultSenderId">40399874452</string>
    <string name="google_api_key">AIzaSyAOR8p1bAMKS4x9THFJ0906VBajrwsUrFs</string>
    <string name="google_app_id">1:40399874452:android:e89fde3c28a9a7d5</string>
    <string name="google_crash_reporting_api_key">AIzaSyAOR8p1bAMKS4x9THFJ0906VBajrwsUrFs</string>
    <string name="google_storage_bucket">pomodoro-timer-pro.appspot.com</string>
    <string name="header_create_task">Create new task</string>
    <string name="header_edit_task">Edit task</string>
    <string name="header_settings">Settings</string>
    <string name="header_stats">Statistics</string>
    <string name="header_tasks">Tasks List</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hundred_percent_concentration">100% Concentration</string>
    <string name="hundred_percent_pomodoro">100% Pomodoro</string>
    <string name="keep_screen_on">Keep screen ON</string>
    <string name="language">Language</string>
    <string name="language_label">Language:</string>
    <string name="long_break_duration">Long break duration:</string>
    <string name="long_break_reminders">Long break reminders</string>
    <string name="minimalistic_and_effective">Minimalistic &amp; Effective</string>
    <string name="minimalistic_timer">Minimalistic Timer</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="native_lang_dutch">Nederlands</string>
    <string name="native_lang_english">English</string>
    <string name="native_lang_french">Français</string>
    <string name="native_lang_german">Deutsch</string>
    <string name="native_lang_hindi">हिंदी</string>
    <string name="native_lang_indonesian">Bahasa Indonesia</string>
    <string name="native_lang_italian">Italiano</string>
    <string name="native_lang_japanese">日本語</string>
    <string name="native_lang_korean">한국어</string>
    <string name="native_lang_polish">Polski</string>
    <string name="native_lang_portuguese">Português</string>
    <string name="native_lang_russian">Русский</string>
    <string name="native_lang_slovak">Slovenčina</string>
    <string name="native_lang_spanish">Español</string>
    <string name="native_lang_thai">ไทย</string>
    <string name="native_lang_turkish">Türkçe</string>
    <string name="native_lang_vietnamese">Tiếng Việt</string>
    <string name="no_ads">NO Ads</string>
    <string name="no_task_placeholder">Tap to add a task</string>
    <string name="no_tasks_placeholder_text">No Tasks.\10Tap + to add a task.</string>
    <string name="notification_break_finished_body">Let\'s get back to work!</string>
    <string name="notification_break_finished_title">The break is over</string>
    <string name="notification_break_running_body">Take a rest, you deserve it!</string>
    <string name="notification_break_running_title">Break is running</string>
    <string name="notification_pomodoro_finished_body">Time to take a break.</string>
    <string name="notification_pomodoro_finished_title">Completed pomodoro</string>
    <string name="notification_pomodoro_running_body">Pomodoro is running. Focus!</string>
    <string name="notification_pomodoro_running_title">Pomodoro is running</string>
    <string name="one_hour">1 hour</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pomodoro_duration">Pomodoro duration:</string>
    <string name="pomodoro_duration_recommendation">Recommended pomodoro duration is 25 minutes.</string>
    <string name="pomodoro_timer_lite">Pomodoro Timer Lite</string>
    <string name="pomodoro_timer_pro">Pomodoro Timer Pro</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="pro_in_brackets">(PRO)</string>
    <string name="project_id">pomodoro-timer-pro</string>
    <string name="rating_dialog_body">If you enjoy using this app, please take a moment and give us 5 stars. Thanks for your support!</string>
    <string name="rating_dialog_negative_btn">NO</string>
    <string name="rating_dialog_neutral_btn">MAYBE LATER</string>
    <string name="rating_dialog_positive_btn">RATE NOW!</string>
    <string name="rating_dialog_title">Please rate us!</string>
    <string name="refresh_your_brain">Refresh your brain</string>
    <string name="ringing_1">Ringing 1</string>
    <string name="ringing_2">Ringing 2</string>
    <string name="ringing_3">Ringing 3</string>
    <string name="ringing_4">Ringing 4</string>
    <string name="ringing_5">Ringing 5</string>
    <string name="ringing_sound">Ringing sound:</string>
    <string name="ringing_volume">Ringing volume:</string>
    <string name="save">Save</string>
    <string name="search_menu_title">Search</string>
    <string name="short_break_duration">Short break duration:</string>
    <string name="simple_stats">Simple stats</string>
    <string name="start">Start</string>
    <string name="start_pomodoro">Start Pomodoro</string>
    <string name="stats_label_last_month">Last month</string>
    <string name="stats_label_last_month_vs">(vs. the month before last)</string>
    <string name="stats_label_this_month">This month so far</string>
    <string name="stats_label_this_month_vs">(vs. the same day last month)</string>
    <string name="stats_label_today">Today so far</string>
    <string name="stats_label_total">Total</string>
    <string name="stats_label_yesterday">Yesterday</string>
    <string name="stats_label_yesterday_vs">(vs. the same day last week)</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="task_name">Task name:</string>
    <string name="task_name_hint">Type task name</string>
    <string name="tasks_with_estimates">Tasks with estimates</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="thank_you_for_5_stars">Thank you for your 5 stars!</string>
    <string name="thirty_five_minutes">35 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="three_minutes">3 minutes</string>
    <string name="ticking_1">Ticking 1</string>
    <string name="ticking_2">Ticking 2</string>
    <string name="ticking_3">Ticking 3</string>
    <string name="ticking_4">Ticking 4</string>
    <string name="ticking_sound">Ticking sound:</string>
    <string name="ticking_volume">Ticking volume:</string>
    <string name="today_s_tasks">Today\'s tasks</string>
    <string name="todo_list">TODO list</string>
    <string name="twenty_five_minutes">25 minutes</string>
    <string name="twenty_minutes">20 minutes</string>
    <string name="upgrade_to_pro_app_name">POMODORO TIMER\10PRO</string>
    <string name="upgrade_to_pro_header">BOOST YOUR\10PRODUCTIVITY</string>
    <string name="upgrade_to_pro_later_btn">Maybe Later</string>
    <string name="upgrade_to_pro_stats">Simple Statistics</string>
    <string name="upgrade_to_pro_support">Support the Development</string>
    <string name="upgrade_to_pro_tasks">Tasks Management</string>
    <string name="upgrade_to_pro_upgrade_btn">Upgrade to PRO</string>
    <string name="vibrate">Vibrate</string>
    <string name="welcome">Welcome</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_task_dialog_header">Enter task name</string>
    <string name="add_task_dialog_hint">Type task name</string>
    <string name="app_name">Pomodoro Timer</string>
</resources>
