<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_red"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_box"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_bar_height">

        <TextView
            android:id="@+id/text_header"
            style="@style/ActivityHeader"
            android:text="@string/header_create_task" />
    </RelativeLayout>

    <View style="@style/Delimiter" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/page_content_background_color"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:id="@+id/task_name_label"
                style="@style/SettingsLabel"
                android:text="@string/task_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_task_name"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name_hint"
                android:inputType="textCapSentences"
                android:maxLength="40"
                android:paddingTop="8dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/expected_pomodoros_label"
                    style="@style/SettingsLabel"
                    android:layout_weight="1"
                    android:text="@string/expected_pomodoros" />

                <TextView
                    android:id="@+id/text_expected_pomodoros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="8"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_bar_expected_pomodoros"
                style="@style/VolumeBar"
                android:max="7"
                android:progress="3" />

            <Button
                android:id="@+id/btn_save"
                style="@style/ButtonStandard.Green"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
