<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_light_red"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <TextView
                android:id="@+id/label_top_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upgrade_to_pro_header"
                android:textColor="@color/white"
                android:textSize="@dimen/buy_pro_header_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <ImageView
                android:layout_width="@dimen/buy_pro_pomodoro_icon_size"
                android:layout_height="@dimen/buy_pro_pomodoro_icon_size"
                android:src="@drawable/ic_pomodoro_pro" />

            <TextView
                android:id="@+id/label_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/upgrade_to_pro_app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/buy_pro_sub_header_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <LinearLayout style="@style/BuyPremiumItemBox">

                    <ImageView
                        style="@style/BuyPremiumItemIcon"
                        android:src="@drawable/ic_pro_tasks" />

                    <TextView
                        android:id="@+id/label_tasks"
                        style="@style/BuyPremiumItemText"
                        android:text="@string/upgrade_to_pro_tasks" />
                </LinearLayout>

                <LinearLayout style="@style/BuyPremiumItemBox">

                    <ImageView
                        style="@style/BuyPremiumItemIcon"
                        android:src="@drawable/ic_pro_chart" />

                    <TextView
                        android:id="@+id/label_stats"
                        style="@style/BuyPremiumItemText"
                        android:text="@string/upgrade_to_pro_stats" />
                </LinearLayout>

                <LinearLayout style="@style/BuyPremiumItemBox">

                    <ImageView
                        style="@style/BuyPremiumItemIcon"
                        android:src="@drawable/ic_pro_heart" />

                    <TextView
                        android:id="@+id/label_support"
                        style="@style/BuyPremiumItemText"
                        android:text="@string/upgrade_to_pro_support" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_upgrade_to_premium"
                style="@style/ButtonStandard.Green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/upgrade_to_pro_upgrade_btn"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_maybe_later"
                style="@style/ButtonStandard.Red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/upgrade_to_pro_later_btn"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
